noinst_LIBRARIES = libbayes-glib-1.0.a

libbayes_glib_1_0_a_SOURCES = \
	bayes-glib/src/bayes-classifier.h \
	bayes-glib/src/bayes-glib.h \
	bayes-glib/src/bayes-guess.h \
	bayes-glib/src/bayes-storage-memory.h \
	bayes-glib/src/bayes-storage.h \
	bayes-glib/src/bayes-tokenizer.h \
	bayes-glib/src/bayes-version.h \
	bayes-glib/src/bayes-guess-private.h \
	bayes-glib/src/bayes-storage-memory-private.h \
	bayes-glib/src/bayes-classifier.c \
	bayes-glib/src/bayes-guess.c \
	bayes-glib/src/bayes-storage-memory.c \
	bayes-glib/src/bayes-storage.c \
	bayes-glib/src/bayes-tokenizer.c

libbayes_glib_1_0_a_CFLAGS = $(BAYES_GLIB_CFLAGS)

-include $(top_srcdir)/git.mk
