bayes_glib = files([
	'bayes-glib/src/bayes-classifier.c',
	'bayes-glib/src/bayes-guess.c',
	'bayes-glib/src/bayes-storage-memory.c',
	'bayes-glib/src/bayes-storage.c',
	'bayes-glib/src/bayes-tokenizer.c',
])

bayes_glib_args = ['--vapidir=' + meson.current_source_dir(), '--pkg=bayes-glib-1.0']
bayes_glib_inc = include_directories('bayes-glib/src')
